// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<span
  className="note nowrap spacer-left"
>
  [
  background_task.type.REPORT
  ]
</span>
`;

exports[`renders 2`] = `
<span
  className="note nowrap spacer-left"
>
  [
  background_task.type.REPORT
   - incremental
  ]
</span>
`;
